--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "version": 2,
     "data": {
         "enabled": true,
-        "CENTER_ALERT": true
+        "CENTER_ALERT": true,
         "SHOW_ENRAGE_TIME": false
     }
 }
